--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,4 +26,5 @@ jobs:
       run: mvn -B package --file pom.xml
     - name: Compile Test
       run: mvn test-compile -pl jsoncoder -am
+    - name: First Test
       run: mvn -pl jsoncoder test -Dtest=org.jsonex.jsoncoder.JSONCoderTest#testEnumNameOption
